objects/Deal__c.object
<CustomObject>
    <fields>
        <fullName>TC_Status__c</fullName>
        <label>TC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Hero</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TP_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TP Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Dealpdf_workflow__c</fullName>
        <formula>HYPERLINK(&quot;https://composer.congamerge.com/?SessionId=&quot; + $Api.Session_ID +
&quot;&amp;ServerURL=&quot; +  $Api.Partner_Server_URL_290 +
 Deal_PDF2__c ,
&quot;testdealpdf&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Dealpdf workflow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Report__c</fullName>
        <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;#/sObject/00O0K00000AOi0n/view?fv0=&quot;, 
&quot;/00O0K00000AOi0n?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Ticketing Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticketing Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticketing_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ticketing Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ticketing_Instructions_NZ__c</fullName>
        <label>Ticketing Instructions - NZ</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ticketing_Instructions__c</fullName>
        <label>Ticketing Instructions</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Toggle_Deal_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Toggle Deal PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Facebook_Spend__c</fullName>
        <label>Total Facebook Spend</label>
        <summarizedField>Marketing_Spend__c.Spend__c</summarizedField>
        <summaryFilterItems>
            <field>Marketing_Spend__c.Marketing_Channel__c</field>
            <operation>equals</operation>
            <value>Facebook</value>
        </summaryFilterItems>
        <summaryForeignKey>Marketing_Spend__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Held_Allocations__c</fullName>
        <inlineHelpText>Roll up summary of Total Held allocations for Dep Dates</inlineHelpText>
        <label>Total Held Allocations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Instagram_Spend__c</fullName>
        <label>Total Instagram Spend</label>
        <summarizedField>Marketing_Spend__c.Spend__c</summarizedField>
        <summaryFilterItems>
            <field>Marketing_Spend__c.Marketing_Channel__c</field>
            <operation>equals</operation>
            <value>Instagram</value>
        </summaryFilterItems>
        <summaryForeignKey>Marketing_Spend__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Marketing_Spend__c</fullName>
        <label>Total Marketing Spend</label>
        <summarizedField>Marketing_Spend__c.Spend__c</summarizedField>
        <summaryForeignKey>Marketing_Spend__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Newspaper_Spend__c</fullName>
        <label>Total Newspaper Spend</label>
        <summarizedField>Marketing_Spend__c.Spend__c</summarizedField>
        <summaryFilterItems>
            <field>Marketing_Spend__c.Marketing_Channel__c</field>
            <operation>equals</operation>
            <value>Revenue Share Print Media (Newspaper), Print Media (Newspaper)</value>
        </summaryFilterItems>
        <summaryForeignKey>Marketing_Spend__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Other_Spend__c</fullName>
        <label>Total Other Spend</label>
        <summarizedField>Marketing_Spend__c.Spend__c</summarizedField>
        <summaryFilterItems>
            <field>Marketing_Spend__c.Marketing_Channel__c</field>
            <operation>equals</operation>
            <value>Other</value>
        </summaryFilterItems>
        <summaryForeignKey>Marketing_Spend__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_QTY_Sold__c</fullName>
        <label>Total QTY Sold</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Radio_Spend__c</fullName>
        <label>Total Radio Spend</label>
        <summarizedField>Marketing_Spend__c.Spend__c</summarizedField>
        <summaryFilterItems>
            <field>Marketing_Spend__c.Marketing_Channel__c</field>
            <operation>equals</operation>
            <value>Radio</value>
        </summaryFilterItems>
        <summaryForeignKey>Marketing_Spend__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Remaining_Allocations__c</fullName>
        <inlineHelpText>Roll up summary of Total Remaining allocations for Dep Dates</inlineHelpText>
        <label>Total Remaining Allocations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_AU__c</fullName>
        <inlineHelpText>Calculation of &quot;Total Price&quot; on orders = TAD/TC/NRMA record type + Confirmed order status</inlineHelpText>
        <label>Total Revenue AU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_NZ__c</fullName>
        <inlineHelpText>Calculation of &quot;Total Price&quot; on orders = TNZ record type + Confirmed order status</inlineHelpText>
        <label>Total Revenue NZ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Sales__c</fullName>
        <label>Total Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Sold_Allocations__c</fullName>
        <inlineHelpText>Roll up summary of Total Sold allocations for Dep Dates</inlineHelpText>
        <label>Total Sold Allocations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <description>Created by Rollup Helper</description>
        <label>Total</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transfer_From_Location_Arriv_Transfers__c</fullName>
        <inlineHelpText>Please indicate location the transfer is FROM.</inlineHelpText>
        <label>Transfer From Location(Arriv Transfers)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_From_Location_Dept_Transfer__c</fullName>
        <label>Transfer From Location(Dept Transfer)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_To_Location_Arrival_Transfers__c</fullName>
        <inlineHelpText>Please indicate the location that this transfer is TO.</inlineHelpText>
        <label>Transfer To Location(ARRIVAL TRANSFERS)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_To_Location_Dept_Transfers__c</fullName>
        <label>Transfer To Location(Dept Transfers)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_Type_Arrival_Transfers__c</fullName>
        <inlineHelpText>Please indicate whether this is a &quot;Group&quot; or &quot;Private&quot; transfer.</inlineHelpText>
        <label>Transfer Type(Arrival Transfers)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transfer_Type_DEPARTURE_TRANSFERS__c</fullName>
        <inlineHelpText>Please select what type of transfer this is either &quot;Group&quot; or &quot;Private.&quot;</inlineHelpText>
        <label>Transfer Type(Dept Transfers)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Pack_Type__c</fullName>
        <description>This is used to show which travel pack the customer should receive for this deal.</description>
        <inlineHelpText>This is used to show which travel pack the customer should receive for this deal.</inlineHelpText>
        <label>Travel Pack Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TAD Travel Intro Pack</fullName>
                </value>
                <value>
                    <fullName>TAD Travel Pack</fullName>
                </value>
                <value>
                    <fullName>UJ Travel Pack</fullName>
                </value>
                <value>
                    <fullName>No Travel Pack required</fullName>
                </value>
                <value>
                    <fullName>TIP</fullName>
                    <isActive>false</isActive>
                    <label>TIP</label>
                </value>
                <value>
                    <fullName>TTP</fullName>
                    <isActive>false</isActive>
                    <label>TTP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UJ_Customisations_Report__c</fullName>
        <formula>HYPERLINK(&quot;/UJ/00O0K00000AOi1C?pv0=&quot;&amp;Name, Deal_ID_Title__c &amp;&quot; Customisations Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UJ - Customisations Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UJ_Flight_Ticketing_Status_Report__c</fullName>
        <formula>HYPERLINK(&quot;/UJ/00O0K00000AOlvN?pv0=&quot;&amp;Name, Deal_ID_Title__c &amp;&quot; Flight Ticketing Status Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UJ - Flight Ticketing Status Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UJ_Portal_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UJ Portal Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UJ_Ticketing_Report__c</fullName>
        <formula>HYPERLINK(&quot;/UJ/00O0K00000AOi0n?pv0=&quot;&amp;Name, Deal_ID_Title__c &amp;&quot; Ticketing Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UJ - Ticketing Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_NZ__c</fullName>
        <label>URL - NZ</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Text_NZ__c</fullName>
        <formula>&apos;https://www.tripadeal.co.nz/deals/&apos;&amp;URL_NZ__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL Text NZ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Text__c</fullName>
        <formula>&apos;https://www.tripadeal.com.au/deals/&apos;&amp;URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_look_up__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>user for conga to get user details (agent)</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valid_From_NZ__c</fullName>
        <label>Valid From - NZ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To_nz__c</fullName>
        <label>Valid To NZ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Video_Link__c</fullName>
        <label>Video Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Visa_Requirements__c</fullName>
        <inlineHelpText>Please select the correct visa requirements for customers for all countries related to this deal.</inlineHelpText>
        <label>Visa Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Visa required</fullName>
                </value>
                <value>
                    <fullName>Visa Required</fullName>
                </value>
                <value>
                    <fullName>e-Visa required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Y_Value__c</fullName>
        <formula>Total_Remaining_Allocations__c *  price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>aaatest__c</fullName>
        <label>aaatest</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blueprint_set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blueprint Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>built_in_stop_over__c</fullName>
        <formula>Deal_Draft__r.built_in_stop_over__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If a Stop Over has been built into the deal as part of the standard itinerary then this check box is checked - see Deal Draft for original check box.</inlineHelpText>
        <label>Built In Stop Over</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>campaign2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>campaign2</label>
        <referenceTo>campaign__c</referenceTo>
        <relationshipLabel>Deal (campaign2)</relationshipLabel>
        <relationshipName>Deal1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>campaign3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>campaign3</label>
        <referenceTo>campaign__c</referenceTo>
        <relationshipLabel>Deal (campaign3)</relationshipLabel>
        <relationshipName>Deal2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>campaign</label>
        <referenceTo>campaign__c</referenceTo>
        <relationshipLabel>Deal</relationshipLabel>
        <relationshipName>Deal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>category__c</fullName>
        <label>Hero Field Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>travel</fullName>
                    <default>true</default>
                    <label>travel</label>
                </value>
                <value>
                    <fullName>cruise</fullName>
                </value>
                <value>
                    <fullName>stay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>category_nz__c</fullName>
        <label>Hero Field Category - NZ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>travel</fullName>
                </value>
                <value>
                    <fullName>cruise</fullName>
                </value>
                <value>
                    <fullName>stay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cs_departures_report__c</fullName>
        <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;,
&quot;#/sObject/00O0K00000AOq57/view?fv0=&quot;,
&quot;/00O0K00000AOq57?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Departures Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CS Departures Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customisations_report__c</fullName>
        <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;#/sObject/00O0K00000AOi1C/view?fv0=&quot;, 
&quot;/00O0K00000AOi1C?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Customisations Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customisations Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deal_archetype__c</fullName>
        <label>Deal Archetype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MADU1</fullName>
                </value>
                <value>
                    <fullName>MADUZ1</fullName>
                </value>
                <value>
                    <fullName>MADU2</fullName>
                </value>
                <value>
                    <fullName>MADUZ2</fullName>
                </value>
                <value>
                    <fullName>TAIU1</fullName>
                </value>
                <value>
                    <fullName>TAIZ1</fullName>
                </value>
                <value>
                    <fullName>TAIUZ1</fullName>
                </value>
                <value>
                    <fullName>TAIU2</fullName>
                </value>
                <value>
                    <fullName>TAIZ2</fullName>
                </value>
                <value>
                    <fullName>TAIUZ2</fullName>
                </value>
                <value>
                    <fullName>TANU1</fullName>
                </value>
                <value>
                    <fullName>TANZ1</fullName>
                </value>
                <value>
                    <fullName>TANUZ1</fullName>
                </value>
                <value>
                    <fullName>TANU2</fullName>
                </value>
                <value>
                    <fullName>TANZ2</fullName>
                </value>
                <value>
                    <fullName>TANUZ2</fullName>
                </value>
                <value>
                    <fullName>MANU1</fullName>
                </value>
                <value>
                    <fullName>MANUZ1</fullName>
                </value>
                <value>
                    <fullName>MANU2</fullName>
                </value>
                <value>
                    <fullName>MANUZ2</fullName>
                </value>
                <value>
                    <fullName>RADU1</fullName>
                </value>
                <value>
                    <fullName>RADUZ1</fullName>
                </value>
                <value>
                    <fullName>RADU2</fullName>
                </value>
                <value>
                    <fullName>RADUZ2</fullName>
                </value>
                <value>
                    <fullName>CAIU1</fullName>
                </value>
                <value>
                    <fullName>CAIZ1</fullName>
                </value>
                <value>
                    <fullName>CAIUZ1</fullName>
                </value>
                <value>
                    <fullName>CAIU2</fullName>
                </value>
                <value>
                    <fullName>CAIZ2</fullName>
                </value>
                <value>
                    <fullName>CAIUZ2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>deal_type__c</fullName>
        <label>deal type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>travel</fullName>
                </value>
                <value>
                    <fullName>cruise</fullName>
                </value>
                <value>
                    <fullName>stay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>deal_type_nz__c</fullName>
        <label>Deal Type - NZ</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>travel</fullName>
                </value>
                <value>
                    <fullName>cruise</fullName>
                </value>
                <value>
                    <fullName>stay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>description_NZ__c</fullName>
        <label>Deal Highlights - NZ</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>Deal Highlights</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>destination_NZ__c</fullName>
        <label>Landing Page Destination - NZ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>destination__c</fullName>
        <label>Landing Page Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eDM_Count__c</fullName>
        <label>eDM Count</label>
        <summaryFilterItems>
            <field>Marketing_Spend__c.Marketing_Channel__c</field>
            <operation>equals</operation>
            <value>Electronic Direct Mail (eDM)</value>
        </summaryFilterItems>
        <summaryForeignKey>Marketing_Spend__c.Deal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>end_date__c</fullName>
        <label>Website end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>end_date_nz__c</fullName>
        <label>End Date - NZ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fine_print_nz__c</fullName>
        <inlineHelpText>Label name change - from Fine Print - NZ to Important Info - NZ (KB 27/02/19)</inlineHelpText>
        <label>Important Information - NZ</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>formulaforimage__c</fullName>
        <formula>IMAGE( holdimage_for_community__c , &apos;Image Title&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formulaforimage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>has_flights__c</fullName>
        <formula>IF( OR(ISPICKVAL( Dates_Flights__c,&apos;Dates/Domestic Flights&apos;),ISPICKVAL( Dates_Flights__c,&apos;Dates/International Flights&apos;)) ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>has flights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>holdimage_for_community__c</fullName>
        <label>holdimage for community</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_domestic__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this deal centered around domestic travel locations?</inlineHelpText>
        <label>Is Domestic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>itinerary_10_label__c</fullName>
        <label>Itinerary 10 Label</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>itinerary_1_label__c</fullName>
        <label>Itinerary 1 Label</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>itinerary_2_label__c</fullName>
        <label>Itinerary 2 Label</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>itinerary_information__c</fullName>
        <inlineHelpText>Deal specific information used in itineraries</inlineHelpText>
        <label>Itinerary Information</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>itinerary_information_nrma__c</fullName>
        <label>Itinerary Information NRMA</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>itinerary_information_nz__c</fullName>
        <label>Itinerary Information NZ</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>itinerary_information_tc__c</fullName>
        <label>Itinerary Information TC</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>last_mod_time__c</fullName>
        <label>last mod time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lotdts__c</fullName>
        <description>Is populated by Dealc Trigger as to what deal it is classified as</description>
        <inlineHelpText>Is populated by Dealc Trigger as to what deal it is classified as and offers feed back on what areas of the deal are not populated correctly.</inlineHelpText>
        <label>Lord of the Deal Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>map__c</fullName>
        <label>map</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>merchant_sharing_deadline__c</fullName>
        <inlineHelpText>Number of days prior to departure that merchant will receive booking confirmation. If multi-merchant deal, please use the most restrictive deadline e.g 120 days instead of 90.</inlineHelpText>
        <label>Merchant Sharing Deadline - Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>merchant_sharing_deadline_date__c</fullName>
        <inlineHelpText>Date that merchant is to receive booking confirmation. If multi-merchant deal, please use the most restrictive deadline.</inlineHelpText>
        <label>Merchant Sharing Deadline - Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>merchant_sharing_deadline_notes__c</fullName>
        <inlineHelpText>Please enter any information/date/comment relevant to deadline</inlineHelpText>
        <label>Merchant Sharing Deadline Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>meta_description__c</fullName>
        <label>Meta Description</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>Landing Page Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>name_nz__c</fullName>
        <label>Landing Page Name - NZ</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>number_of_days__c</fullName>
        <label>number of days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>number_of_days_nz__c</fullName>
        <label>Number of days - NZ</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>order__c</fullName>
        <label>order on site</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>order_filter__c</fullName>
        <label>Order Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pdf__c</fullName>
        <label>pdf</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pdf_nz__c</fullName>
        <label>PDF - NZ</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>per_night_allocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Per Night Allocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>price__c</fullName>
        <label>price</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>price_nz__c</fullName>
        <label>Price - NZD</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>price_text__c</fullName>
        <label>PP/ # People</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>price_type__c</fullName>
        <label>price type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>per person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>real_end_date_nz__c</fullName>
        <label>Real End Date - NZ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>recently_expired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recently Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>recently_expired_nz__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recently Expired - NZ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>show_as_escape__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show As Escape</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>site__c</fullName>
        <label>Site</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>NZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>start_date__c</fullName>
        <label>start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>stop_order_comms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stop Order Comms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tags__c</fullName>
        <label>tags</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testdealpdfqueries__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;templateid=a4C0K000000D9iJ&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;qmode=Attachments&quot; + 
&quot;&amp;ofn=&quot; + Name + &quot; &quot; + Agents__c + 
&quot;&amp;queryid=[TCItinerary]a4428000000E87Q,[TCOptions1]a4428000000E8Br,[TCSubOptions1]a4428000000E8CG,[TourInclusions]a4428000000YycV,[Dealpdf]a4428000000Yycu?pv0=&quot; + Agents__r.Acct_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>testdealpdfqueries</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>title__c</fullName>
        <label>title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>title_nz__c</fullName>
        <label>Title - NZ</label>
        <length>250</length>
        <type>Text</type>
    </fields>
</CustomObject>